# subtitles-and-learning-app

./: .env.example  .gitignore  CLAUDE.md  README.md  app.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.mjs  styles.css
.claude/skills/verify/: SKILL.md
data/: cedict-seed.u8
public/: debug.html  index.html  styles.css
public/js/: flashcards.mjs  languages.mjs  lookup.mjs  main.mjs  miniplayer.mjs  player.mjs  romanize.mjs  state.mjs  subtitle.mjs  translate.mjs  ui.mjs  util.mjs
public/js/lang/: generic.mjs  index.mjs  segmented.mjs  zh.mjs
scripts/: fetch-cedict.mjs  prefetch_models.py  sync.mjs
server/: captions.mjs  context_rank.py  cookies.mjs  import.mjs  index.mjs  ipv4_first.py  lookup.mjs  ocr_captions.py  romanize.mjs  romanize.py  segment.mjs  static.mjs  transcribe.py  translate.mjs  translate.py  translateWorker.mjs  util.mjs  zh_convert.py
subtitles-and-learning-app/: README.md  index.html  server.mjs
test/: captions.test.mjs  languages.test.mjs  lookup.test.mjs  segment.test.mjs  subtitle.test.mjs  test_ocr_captions.py  test_romanize.py  test_transcribe.py  test_translate.py
