[project]
name = "subtitles-and-learning-app"
version = "1.0.0"
description = "Local transcription + offline translation pipeline for the Miraa-style Language Studio."
requires-python = ">=3.10"

# The Python side of the app: speech-to-text (Whisper) and offline
# translation (NLLB-200 via transformers/torch). Versions are pinned to the
# set this project was developed and tested against.
dependencies = [
    # NLLB-200 translation (server/translate.py, server/context_rank.py).
    # Pulls in torch, tokenizers, safetensors, huggingface-hub, etc.
    "transformers==5.12.1",
    # Tensor/math engine that runs the NLLB model.
    "torch==2.12.1",
    # Local speech-to-text used when a video has no existing subtitle track.
    "openai-whisper==20250625",
]

# yt-dlp (URL import) is deliberately NOT listed here. It lives on the nightly
# channel because the stable release lags behind YouTube's frequent changes,
# and pinning a nightly into uv.lock would go stale immediately. Install it
# separately into the same venv:
#   uv pip install -U --prerelease=allow "yt-dlp[default]"

# Torch is locked to the CPU build so the lockfile resolves and runs on any
# machine (the default PyPI wheel is a CUDA build that bloats CPU-only boxes and,
# on older GPUs like Pascal/GTX 10-series, fails with "no kernel image available").
# To use an NVIDIA GPU, install a matching CUDA build over the top after syncing,
# e.g. for a GTX 10-series (sm_61) the CUDA 12.6 wheel JITs correctly:
#   uv pip install --reinstall-package torch torch==2.12.1 \
#     --index https://download.pytorch.org/whl/cu126 --index-strategy unsafe-best-match
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
